[package]
name = "up_only"
version = "0.1.0"
description = "UpOnly - A Solana-based token launchpad with governance, staking, and trading features."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "up_only"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.17.19"

